# twitterclone

./: README.md  pyproject.toml  requirements.txt
authentication/: forms.py  views.py
notification/: models.py  views.py
notification/migrations/: 0001_initial.py  0002_notifications_tweet_id.py  0003_notifications_tweeter.py  0004_notifications_tweet_time.py  0005_remove_notifications_tweet_time.py
templates/: base.html  home.html  login.html  notifications.html  profile.html  signup.html  tweet.html  tweetpage.html
tweet/: admin.py  forms.py  models.py  views.py
tweet/migrations/: 0001_initial.py  0002_tweet_author.py
twitterclone/: settings.py  urls.py
twitteruser/: admin.py  forms.py  models.py  views.py
twitteruser/migrations/: 0001_initial.py  0002_auto_20210305_0820.py  0003_auto_20210305_0823.py
